--- a/Setup/Schema DDLs.dbquery.ipynb
+++ b/Setup/Schema DDLs.dbquery.ipynb
@@ -5,7 +5,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 10485760,
+      "rowLimit": 1000
+     },
      "inputWidgets": {},
      "nuid": "aaa4899a-b801-4207-8356-0195209af364",
      "showTitle": false,
@@ -15,9 +18,14 @@
    },
    "outputs": [],
    "source": [
-    "CREATE SCHEMA IF NOT EXISTS gshen_catalog.bronze_eia;\n",
-    "CREATE SCHEMA IF NOT EXISTS gshen_catalog.silver_eia;\n",
-    "CREATE SCHEMA IF NOT EXISTS gshen_catalog.gold_eia;"
+    "-- Create schema for bronze level data if it does not exist\n",
+    "CREATE SCHEMA IF NOT EXISTS gshen_eia_catalog.eia_bronze;\n",
+    "\n",
+    "-- Create schema for silver level data if it does not exist\n",
+    "CREATE SCHEMA IF NOT EXISTS gshen_eia_catalog.eia_silver;\n",
+    "\n",
+    "-- Create schema for gold level data if it does not exist\n",
+    "CREATE SCHEMA IF NOT EXISTS gshen_eia_catalog.eia_gold;"
    ]
   }
  ],
@@ -26,6 +34,7 @@
    "computePreferences": null,
    "dashboards": [],
    "environmentMetadata": null,
+   "inputWidgetPreferences": null,
    "language": "sql",
    "notebookMetadata": {
     "sqlQueryOptions": {
